[gd_scene load_steps=5 format=3 uid="uid://db45deki26s38"]

[ext_resource type="Theme" uid="uid://bncgplyvgv608" path="res://Materials/default_theme.tres" id="1_emv3i"]
[ext_resource type="Script" uid="uid://dae2knce8q45k" path="res://Scripts/pause_menu.gd" id="1_k0w1u"]

[sub_resource type="Gradient" id="Gradient_emv3i"]
colors = PackedColorArray(0.574301, 0.299431, 0, 1, 0, 0.47451, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k0w1u"]
gradient = SubResource("Gradient_emv3i")
fill_from = Vector2(1, 1)

[node name="Pause Menu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0w1u")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_k0w1u")

[node name="Paused Text" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_top = 58.0
offset_right = 139.0
offset_bottom = 205.0
grow_horizontal = 2
theme = ExtResource("1_emv3i")
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 90
text = "Paused"
fit_content = true

[node name="Resume" type="Button" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -216.0
offset_right = 87.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_emv3i")
text = "Resume"

[node name="Main Menu" type="Button" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.0
offset_top = -108.0
offset_right = 138.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_emv3i")
text = "Main Menu"

[node name="SFX Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -146.0
offset_right = 139.0
offset_bottom = -100.25
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_emv3i")
text = "Sound Effects"

[node name="SFX Volume" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -100.0
offset_right = 138.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_emv3i")
max_value = 1.0
step = 0.1
value = 0.5

[node name="Music Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -30.0
offset_right = -18.0
offset_bottom = 15.75
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_emv3i")
text = "Music"

[node name="Music Volume" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = 16.0
offset_right = 139.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_emv3i")
max_value = 1.0
step = 0.1
value = 0.5

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="value_changed" from="SFX Volume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="value_changed" from="Music Volume" to="." method="_on_music_volume_value_changed"]
